# inkplateImageFrame

./: LICENSE.txt  README.md
firmware/: .gitignore  CMakeLists.txt  Image_Frame.ino  README.md  auth.h.txt  error_image.h  sd_image_repo.cpp  sd_image_repo.h  workspace.code-workspace
